<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.safe_drive_app.RegisterDriver">

    <TextView
        android:id="@+id/register_driver_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_driver_intro"
        android:layout_below="@+id/register_driver_title"/>

    <EditText
        android:id="@+id/driver_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/register_driver_intro"
        android:background="@color/textBackground"
        android:hint="@string/first_name"
        android:inputType="textPersonName|textCapWords"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:saveEnabled="true"/>

    <EditText
        android:id="@+id/driver_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/driver_name"
        android:background="@color/textBackground"
        android:hint="@string/phone_number_text"
        android:inputType="phone"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:saveEnabled="true"/>

    <EditText
        android:id="@+id/driver_id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/driver_phone_number"
        android:background="@color/textBackground"
        android:hint="@string/id_number"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:saveEnabled="true"/>

    <Button
        android:id="@+id/register_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:onClick="openDriverScreen"
        android:layout_below="@id/driver_id_number"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/register_driver_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register_driver_title"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</RelativeLayout>
