<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.safe_drive_app.CancelRide">

    <TextView
        android:id="@+id/cancel_ride_announce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_ride_intro"
        android:layout_below="@+id/cancel_ride_title"/>

    <Button
        android:id="@+id/cancel_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_cancel"
        android:layout_below="@+id/cancel_ride_announce"
        android:layout_centerHorizontal="true"
        android:onClick="sendCancelMessage" />

    <TextView
        android:id="@+id/cancel_ride_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel_ride_title"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</RelativeLayout>
