<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.safe_drive_app.AboutUs">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_intro"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/about_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_info"
            android:layout_below="@+id/about_info_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp" />

        <TextView
            android:id="@+id/about_hours_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_hours_title"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@+id/about_info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp" />

        <TextView
            android:id="@+id/about_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_hours"
            android:layout_below="@+id/about_hours_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

    </RelativeLayout>
</ScrollView>