<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.safe_drive_app.Home_Menu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_title"
        android:textColor="#3e670c"
        android:textSize="20sp" />

    <Button
        android:id="@+id/request_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="openRequestRide"
        android:text="@string/request_ride" />

    <Button
        android:id="@+id/register_driver_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_ride_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="openRegisterDriver"
        android:text="@string/register_driver" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_driver_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="openAboutPage"
        android:text="@string/about_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/server_status"
        android:layout_below="@+id/about_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:textSize="20sp" />

</RelativeLayout>
