<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.felipe.safe_drive_app.DriverScreen">

    <TextView
        android:id="@+id/driver_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/driver_screen_title"
        android:textColor="#3e670c"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ride_status_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/driver_screen_title"
        android:text="@string/ride_status_header"
        android:textColor="#3e670c"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ride_status_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driver_screen_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:background="@color/textBackground"
        android:layout_alignBottom="@+id/ride_status_header" />

    <TextView
        android:id="@+id/request_incoming_message_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ride_status_header"
        android:text="@string/incoming_message_header"
        android:textColor="#3e670c"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/request_incoming_message_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/request_incoming_message_header"
        android:background="@color/textBackground"/>


</RelativeLayout>
